--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#317EFB",
+  "theme_color": "#000000",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icon.png",
@@ -19,5 +20,6 @@
     }
   ]
 }
+
 
 
