--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Mi App PWA",
-  "short_name": "PWA Simple",
-  "start_url": "index.html",
+  "name": "App",
+  "short_name": "APP",
+  "start_url": "./index.html",
   "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -9,17 +9,20 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "imagenes/icono.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon.png",
+      "src": "imagenes/icono.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "imagenes/icono.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
-
-
-
